--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>MERN boilerplate</title>
-
-  <link rel="icon" type="image/png" href="/assets/img/logo.png">
+  <link rel="shortcut icon" href="./assets/favicon.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
 </head>
 <body>
